# macro-regime-allocation

./: .gitignore  README.md  pyproject.toml  setup_git.sh
data/raw/: msci_developed.xlsx  msci_emerging.xlsx
results/developed/: cost_aware_long_only.csv  cost_sensitivity_long_only.csv  performance_all.csv  performance_long_only.csv  performance_long_short.csv
results/emerging/: cost_aware_long_only.csv  cost_sensitivity_long_only.csv  performance_all.csv  performance_long_only.csv  performance_long_short.csv
src/macro_regime/: cli.py  config.py
src/macro_regime/analytics/: performance.py
src/macro_regime/backtest/: cost_aware.py  engine.py
src/macro_regime/data/: fredmd_loader.py  msci_loader.py  series_names.py
src/macro_regime/models/: allocation.py  forecast.py  optimization.py
src/macro_regime/regimes/: detection.py  naming.py  transitions.py
src/macro_regime/viz/: plots.py
tests/: test_optimization.py  test_pipeline.py
