[project]
name = "macro-regime-allocation"
version = "0.1.0"
description = "Macro-regime detection (PCA + KMeans on FRED-MD) driving a tactical asset-allocation backtest across developed and emerging equities."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Tejas Pandya", email = "tbp8777@nyu.edu" }]
license = { text = "MIT" }
keywords = ["quantitative-finance", "regime-detection", "asset-allocation", "fred-md", "backtesting"]

dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "openpyxl>=3.1",   # pandas needs this to read the MSCI .xlsx files
    "cvxpy>=1.7.5",
]

[project.optional-dependencies]
# MOSEK is the preferred solver but is commercial and licence-gated, so it stays
# optional: the solver policy in models/optimization.py falls back to the
# open-source conic solvers cvxpy ships with. Enable via `uv sync --extra mosek`.
mosek = ["mosek>=10.1"]

[project.scripts]
macro-regime = "macro_regime.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/macro_regime"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
# Keep it sane, not pedantic: pyflakes, pycodestyle, isort, bugbear, comprehensions.
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]  # long lines happen in tables and docstrings; not worth the fight
